dartagnan/src/test/resources/spirv/opencl/gpuverify/benign_race_tests/fail/writereadarray_equality.spvasm
; @Config: 3, 1, 1
; SPIR-V
; Version: 1.0
; Generator: Khronos LLVM/SPIR-V Translator; 14
; Bound: 30
; Schema: 0
               OpCapability Addresses
               OpCapability Linkage
               OpCapability Kernel
          %1 = OpExtInstImport "OpenCL.std"
               OpMemoryModel Physical32 OpenCL
               OpEntryPoint Kernel %12 "example" %__spirv_BuiltInLocalInvocationId
               OpExecutionMode %12 ContractionOff
               OpSource OpenCL_C 200000
               OpName %__spirv_BuiltInLocalInvocationId "__spirv_BuiltInLocalInvocationId"
               OpName %foo "foo"
               OpDecorate %__spirv_BuiltInLocalInvocationId BuiltIn LocalInvocationId
               OpDecorate %__spirv_BuiltInLocalInvocationId Constant
               OpDecorate %foo LinkageAttributes "foo" Import
               OpDecorate %__spirv_BuiltInLocalInvocationId LinkageAttributes "__spirv_BuiltInLocalInvocationId" Import
               OpDecorate %16 Alignment 4
       %uint = OpTypeInt 32 0
     %uint_0 = OpConstant %uint 0
     %uint_1 = OpConstant %uint 1
     %v3uint = OpTypeVector %uint 3
%_ptr_Input_v3uint = OpTypePointer Input %v3uint
       %void = OpTypeVoid
          %7 = OpTypeFunction %void %uint
%_ptr_Workgroup_uint = OpTypePointer Workgroup %uint
         %11 = OpTypeFunction %void %_ptr_Workgroup_uint
%_ptr_Function__ptr_Workgroup_uint = OpTypePointer Function %_ptr_Workgroup_uint
%__spirv_BuiltInLocalInvocationId = OpVariable %_ptr_Input_v3uint Input
        %foo = OpFunction %void None %7
          %9 = OpFunctionParameter %uint
               OpFunctionEnd
         %12 = OpFunction %void DontInline %11
         %13 = OpFunctionParameter %_ptr_Workgroup_uint
         %14 = OpLabel
         %16 = OpVariable %_ptr_Function__ptr_Workgroup_uint Function
               OpStore %16 %13 Aligned 4
         %17 = OpLoad %_ptr_Workgroup_uint %16 Aligned 4
         %18 = OpLoad %v3uint %__spirv_BuiltInLocalInvocationId Aligned 16
         %19 = OpCompositeExtract %uint %18 0
         %20 = OpInBoundsPtrAccessChain %_ptr_Workgroup_uint %17 %19
               OpStore %20 %uint_0 Aligned 4
         %22 = OpLoad %_ptr_Workgroup_uint %16 Aligned 4
         %23 = OpLoad %v3uint %__spirv_BuiltInLocalInvocationId Aligned 16
         %24 = OpCompositeExtract %uint %23 0
         %26 = OpIAdd %uint %24 %uint_1
         %27 = OpInBoundsPtrAccessChain %_ptr_Workgroup_uint %22 %26
         %28 = OpLoad %uint %27 Aligned 4
         %29 = OpFunctionCall %void %foo %28
               OpReturn
               OpFunctionEnd
